# clickhouse-rs

./: .travis.yml  Cargo.toml
src/io/: transport.rs
src/types/: cmd.rs  options.rs  value.rs  value_ref.rs
src/types/block/: builder.rs  compressed.rs  mod.rs
src/types/column/: chrono_datetime.rs  factory.rs  ip.rs  mod.rs  simple_agg_func.rs
src/types/column/iter/: mod.rs
tests/: clickhouse.rs
