[package]
name = "clickhouse-rs"
version = "1.0.0-alpha.1"
authors = ["Mikhail Sukharev <suharev7@gmail.com>"]
license = "MIT"
homepage = "https://github.com/suharev7/clickhouse-rs"
repository = "https://github.com/suharev7/clickhouse-rs"
description = "Asynchronous Yandex ClickHouse client library."
documentation = "https://docs.rs/clickhouse-rs/"
readme = "README.md"
keywords = ["tokio", "database", "clickhouse"]
categories = ["database"]
edition = "2018"
exclude = ["tests/*", "examples/*"]

[features]
default = ["tokio_io"]
tls = ["tokio-native-tls", "native-tls"]
async_std = ["async-std"]
tokio_io = ["tokio"]

[dependencies]
byteorder = "1.4.3"
chrono-tz = "0.6.0"
crossbeam = "0.8.1"
thiserror = "1.0.30"
futures-core = "0.3.18"
futures-sink = "0.3.18"
hostname = "0.3.1"
lazy_static = "1.4.0"
lz4 = "1.23.2"
pin-project = "1.0.8"
url= "2.2.2"
uuid = "0.8.2"
combine = "4.6.2"
clickhouse-rs-cityhash-sys= "0.1.2"

[dependencies.futures-util]
version = "0.3.18"
features = ["sink"]

[dependencies.tokio]
version = "1.14.0"
default-features = false
features = ["io-util", "time", "net", "sync", "rt-multi-thread"]
optional = true

[dependencies.async-std]
version = "1.10.0"
optional = true

[dependencies.log]
version = "0.4.14"
features = ["std", "serde"]

[dependencies.native-tls]
version = "0.2.8"
optional = true

[dependencies.tokio-native-tls]
version = "0.3.0"
optional = true

[dependencies.chrono]
version = "0.4.19"
default-features = false
features = [ "std" ]

[dev-dependencies]
env_logger = "0.9.0"
rand = "0.8.4"

[dev-dependencies.tokio]
version = "1.14.0"
default-features = false
features = ["macros"]
